--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+   <header>
+    <h1 class="header">スケジュール管理アプリ</h1>
+   </header>
+
     <%= yield %>
   </body>
 </html>
